# PurpleReaction

./: .gitignore  CMakeLists.txt  PurpleReaction.sln  README.md
control-ui/PurpleReaction.ControlUI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  PurpleReaction.ControlUI.csproj  ReactionModels.cs
scripts/: package-msix.ps1  package-release.ps1
src/: main.cpp
vs/PurpleReaction.Native/: PurpleReaction.Native.vcxproj  PurpleReaction.Native.vcxproj.filters  appicon.rc
